--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,7 +5,7 @@
 [user]
 	name = Patrick Marsceill
 	email = patrick.marsceill@gmail.com
-	signingkey = AEAF30C14952BCC5
+	signingkey = 286B93882D828F40
 
 [hub]
 protocol = https
@@ -22,7 +22,7 @@ protocol = https
 [commit]
 	gpgsign = true
 [gpg]
-	program = gpg2
+	program = gpg
 [alias]
 	co = checkout
 	br = branch
